--- a/proyecto/Login/login.html
+++ b/proyecto/Login/login.html
@@ -21,10 +21,12 @@
             <input type="password" id="contra" name="contra" placeholder="*********">
 
             <button class="button">Login</button>
-            <button class="button">Sign up</button>
+            <button class="button"><a href="../Registro/registro.html">REGISTRARSE</a></button>
             <p><a href="#">¿Has olvidado tu contraseña?</a></p>
         </form>
 
     </div>
+
+    <p><a href="../index.html">Volver</a></p>
 </body>
 </html>
