--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -10,51 +10,55 @@
 
 <body>
 
-    <div class="container">
 
-        <div class="header">
-            <img src="imagenes/logoMon_SinFondo.png" alt="logo">
-            <hr>
-            <nav>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Fauna</a></li>
-                    <li><a href="#">Flora</a></li>
-                    <li><a href="#">Rutas</a></li>
-                    <li><a href="Login/login.html">Iniciar Sesión</a></li>
-                    <li><a href="Registro/registro.html">Registrarse</a></li>
-                </ul>
-            </nav>
-        </div>
 
-        <div class="main">
-            <h1>Bienvenido a Monfragüe</h1>
-            <p>Descubre la increíble fauna y flora de esta maravillosa zona, y explora las emocionantes rutas que tiene para
-                ofrecer.
-                <br>
-                <img src="imagenes/723px-Monfrague_pan.jpg" alt="img1">
-            </p>
-            <h2>Fauna</h2>
-            <p>Monfragüe es hogar de una diversidad de especies animales, incluyendo aves rapaces como el águila imperial
-                ibérica y el buitre negro.</p>
-            <h2>Flora</h2>
-            <p>La flora de Monfragüe es igualmente impresionante, con una variedad de especies adaptadas a este ecosistema
-                único.</p>
-            <h2>Rutas</h2>
-            <p>Explora las diferentes rutas disponibles para experimentar la belleza natural de Monfragüe y disfrutar de
-                vistas panorámicas inolvidables.</p>
-        </div>
-
-        <div class="foto1"></div>
-
-        <div class="foto2"></div>
-
-        <div class="footer">
-            <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
-                Extremadura</a> para obtener más información.</p>
-        </div>
-        
+    <div class="header">
+        <img src="imagenes/logoMon_SinFondo.png" alt="logo">
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Fauna</a></li>
+                <li><a href="#">Flora</a></li>
+                <li><a href="#">Rutas</a></li>
+                <li><a href="Login/login.html">Iniciar Sesión</a></li>
+                <li><a href="Registro/registro.html">Registrarse</a></li>
+            </ul>
+        </nav>
     </div>
+
+    <div class="main">
+        <h1>Bienvenido a Monfragüe</h1>
+        <p>Descubre la increíble fauna y flora de esta maravillosa zona, y explora las emocionantes rutas que tiene para
+            ofrecer.
+        </p>
+        <img src="imagenes/723px-Monfrague_pan.jpg" alt="img1">
+        <h2>Fauna</h2>
+        <p>Monfragüe es hogar de una diversidad de especies animales, incluyendo aves rapaces como el águila imperial
+            ibérica y el buitre negro.</p>
+        <h2>Flora</h2>
+        <p>La flora de Monfragüe es igualmente impresionante, con una variedad de especies adaptadas a este ecosistema
+            único.</p>
+        <h2>Rutas</h2>
+        <p>Explora las diferentes rutas disponibles para experimentar la belleza natural de Monfragüe y disfrutar de
+            vistas panorámicas inolvidables.</p>
+    </div>
+
+    <div class="video">
+        <h1>Conoce más: </h1>
+        <iframe src="https://www.youtube.com/embed/5XaibqGzWEs?si=MVr87xVC5-mKoPwt&autoplay=1" 
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <p> Visita la página oficial del Ministerio del <a href="https://www.miteco.gob.es/es/parques-nacionales-oapn/red-parques-nacionales/parques-nacionales/monfrague.html">Parque Nacional de Monfrague</a></p>    
+    </div>
+
+    <div class="footer">
+        <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
+                Extremadura</a> para obtener más información.</p>
+    </div>
+
+
 
 
 </body>
