--- a/proyecto/Login/login.html
+++ b/proyecto/Login/login.html
@@ -7,10 +7,21 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <div class="header">
+        <img src="../imagenes/logoMon_SinFondo.png" alt="logo">
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="#">Fauna</a></li>
+                <li><a href="#">Flora</a></li>
+                <li><a href="#">Rutas</a></li>
+                <li><a href="../Registro/registro.html">Registrarse</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <div class="formulario">
-        <div>
-            <img src="../imagenes/logoMon_SinFondo.png" alt="logo">
-        </div>
         <form action="#" method="post">
             <h2>Iniciar sesión</h2>
             <hr>
@@ -27,6 +38,9 @@
 
     </div>
 
-    <p><a href="../index.html">Volver</a></p>
+    <div class="footer">
+        <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
+                Extremadura</a> para obtener más información.</p>
+    </div>
 </body>
 </html>
