--- a/proyecto/Registro/registro.html
+++ b/proyecto/Registro/registro.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="registro.css">
 </head>
 <body>
+    <div class="header">
+        <img src="../imagenes/logoMon_SinFondo.png" alt="logo">
+        <hr>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="#">Fauna</a></li>
+                <li><a href="#">Flora</a></li>
+                <li><a href="#">Rutas</a></li>
+                <li><a href="../Login/login.html">Iniciar Sesión</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <div class="formulario">
-        <div>
-            <img src="../imagenes/logoMon_SinFondo.png" alt="logo">
-        </div>
+
         <form action="#" method="post">
             <h2>Registrarse</h2>
             <hr>
@@ -32,6 +43,10 @@
 
     </div>
 
-    <p><a href="../index.html">Volver</a></p>
+    <div class="footer">
+        <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
+                Extremadura</a> para obtener más información.</p>
+    </div>
+
 </body>
 </html>
