--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -36,12 +36,15 @@
         <h2>Fauna</h2>
         <p>Monfragüe es hogar de una diversidad de especies animales, incluyendo aves rapaces como el águila imperial
             ibérica y el buitre negro.</p>
+            <img src="imagenes/aves-monfrague-2.jpg" alt="img2" width="600px">
         <h2>Flora</h2>
         <p>La flora de Monfragüe es igualmente impresionante, con una variedad de especies adaptadas a este ecosistema
             único.</p>
+        <img src="imagenes/encina_monfrague.jpg" alt="img3" width="600px">
         <h2>Rutas</h2>
         <p>Explora las diferentes rutas disponibles para experimentar la belleza natural de Monfragüe y disfrutar de
             vistas panorámicas inolvidables.</p>
+            <img src="imagenes/rutas_monfrague.png" alt="img4" width="600px">
     </div>
 
     <div class="video">
@@ -54,12 +57,10 @@
     </div>
 
     <div class="footer">
-        <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
-                Extremadura</a> para obtener más información.</p>
+        <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de Extremadura</a> para obtener más información.</p>
+        <img src="imagenes/logo_junta.png" alt="img5">
+        <img src="imagenes/Logo-reserva-de-la-biosfera-monfrague.jpg" alt="img6">
     </div>
-
-
-
 
 </body>
 
