--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página principal</title>
+    <script src="https://kit.fontawesome.com/9cfe8b4c32.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
@@ -21,6 +22,8 @@
                 <li><a href="#">Fauna</a></li>
                 <li><a href="#">Flora</a></li>
                 <li><a href="#">Rutas</a></li>
+                <input type="text" placeholder="Buscar" >
+                <i class="fa-solid fa-magnifying-glass"></i>
                 <li><a href="Login/login.html">Iniciar Sesión</a></li>
                 <li><a href="Registro/registro.html">Registrarse</a></li>
             </ul>
