--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -30,33 +30,34 @@
         </nav>
     </div>
 
-    <div class="main">
-        <h1>Bienvenido a Monfragüe</h1>
-        <p>Descubre la increíble fauna y flora de esta maravillosa zona, y explora las emocionantes rutas que tiene para
-            ofrecer.
-        </p>
-        <img src="imagenes/723px-Monfrague_pan.jpg" alt="img1">
-        <h2>Fauna</h2>
-        <p>Monfragüe es hogar de una diversidad de especies animales, incluyendo aves rapaces como el águila imperial
-            ibérica y el buitre negro.</p>
-            <img src="imagenes/aves-monfrague-2.jpg" alt="img2" width="600px">
-        <h2>Flora</h2>
-        <p>La flora de Monfragüe es igualmente impresionante, con una variedad de especies adaptadas a este ecosistema
-            único.</p>
-        <img src="imagenes/encina_monfrague.jpg" alt="img3" width="600px">
-        <h2>Rutas</h2>
-        <p>Explora las diferentes rutas disponibles para experimentar la belleza natural de Monfragüe y disfrutar de
-            vistas panorámicas inolvidables.</p>
-            <img src="imagenes/rutas_monfrague.png" alt="img4" width="600px">
-    </div>
-
-    <div class="video">
-        <h1>Conoce más: </h1>
-        <iframe src="https://www.youtube.com/embed/5XaibqGzWEs?si=MVr87xVC5-mKoPwt&autoplay=1" 
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-        <p> Visita la página oficial del Ministerio del <a href="https://www.miteco.gob.es/es/parques-nacionales-oapn/red-parques-nacionales/parques-nacionales/monfrague.html">Parque Nacional de Monfrague</a></p>    
+    <div class="container">
+        <div class="main">
+            <h1>Bienvenido a Monfragüe</h1>
+            <p>Descubre la increíble fauna y flora de esta maravillosa zona, y explora las emocionantes rutas que tiene para
+                ofrecer.
+            </p>
+            <img src="imagenes/723px-Monfrague_pan.jpg" alt="img1">
+            <h2>Fauna</h2>
+            <p>Monfragüe es hogar de una diversidad de especies animales, incluyendo aves rapaces como el águila imperial
+                ibérica y el buitre negro.</p>
+                <img src="imagenes/aves-monfrague-2.jpg" alt="img2" width="600px">
+            <h2>Flora</h2>
+            <p>La flora de Monfragüe es igualmente impresionante, con una variedad de especies adaptadas a este ecosistema
+                único.</p>
+            <img src="imagenes/encina_monfrague.jpg" alt="img3" width="600px">
+            <h2>Rutas</h2>
+            <p>Explora las diferentes rutas disponibles para experimentar la belleza natural de Monfragüe y disfrutar de
+                vistas panorámicas inolvidables.</p>
+                <img src="imagenes/rutas_monfrague.png" alt="img4" width="600px">
+        </div>
+        <div class="video">
+            <h1>Conoce más: </h1>
+            <iframe src="https://www.youtube.com/embed/5XaibqGzWEs?si=MVr87xVC5-mKoPwt&autoplay=1"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            <p> Visita la página oficial del Ministerio del <a href="https://www.miteco.gob.es/es/parques-nacionales-oapn/red-parques-nacionales/parques-nacionales/monfrague.html">Parque Nacional de Monfrague</a></p>
+        </div>
     </div>
 
     <div class="footer">
