--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="header">
+    <header>
         <img src="imagenes/logoMon_SinFondo.png" alt="logo">
         <hr>
         <nav>
@@ -28,10 +28,10 @@
                 <li><a href="Registro/registro.html">Registrarse</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
 
     <div class="container">
-        <div class="main">
+        <main>
             <h1>Bienvenido a Monfragüe</h1>
             <p>Descubre la increíble fauna y flora de esta maravillosa zona, y explora las emocionantes rutas que tiene para
                 ofrecer.
@@ -49,7 +49,7 @@
             <p>Explora las diferentes rutas disponibles para experimentar la belleza natural de Monfragüe y disfrutar de
                 vistas panorámicas inolvidables.</p>
                 <img src="imagenes/rutas_monfrague.png" alt="img4" width="600px">
-        </div>
+            </main>
         <div class="video">
             <h1>Conoce más: </h1>
             <iframe src="https://www.youtube.com/embed/5XaibqGzWEs?si=MVr87xVC5-mKoPwt&autoplay=1"
@@ -60,11 +60,11 @@
         </div>
     </div>
 
-    <div class="footer">
+    <footer>
         <img src="imagenes/logo_junta.png" alt="img5">
         <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de Extremadura</a> para obtener más información.</p>
         <img src="imagenes/Logo-reserva-de-la-biosfera-monfrague.jpg" alt="img6">
-    </div>
+    </footer>
 
 </body>
 
