--- a/proyecto/Login/login.html
+++ b/proyecto/Login/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="header">
+    <header>
         <img src="../imagenes/logoMon_SinFondo.png" alt="logo">
         <hr>
         <nav>
@@ -18,7 +18,7 @@
                 <li><a href="#">Rutas</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
 
     <div class="formulario">
         <form action="#" method="post">
@@ -37,9 +37,9 @@
 
     </div>
 
-    <div class="footer">
+    <footer>
         <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
                 Extremadura</a> para obtener más información.</p>
-    </div>
+    </footer>
 </body>
 </html>
