--- a/proyecto/Registro/registro.html
+++ b/proyecto/Registro/registro.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="registro.css">
 </head>
 <body>
-    <div class="header">
+    <header>
         <img src="../imagenes/logoMon_SinFondo.png" alt="logo">
         <hr>
         <nav>
@@ -19,7 +19,7 @@
                 <li><a href="../Login/login.html">Iniciar Sesión</a></li>
             </ul>
         </nav>
-    </div>
+    </header>
 
     <div class="formulario">
 
@@ -43,10 +43,10 @@
 
     </div>
 
-    <div class="footer">
+    <footer>
         <p>Visita la <a href="https://www.juntaex.es/" target="_blank" rel="noopener noreferrer">Junta de
                 Extremadura</a> para obtener más información.</p>
-    </div>
+    </footer>
 
 </body>
 </html>
