--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Fauna</a></li>
                 <li><a href="#">Flora</a></li>
-                <li><a href="#">Rutas</a></li>
+                <li><a href="Rutas/rutas.html">Rutas</a></li>
                 <li>
                     <input type="text" placeholder="Buscar" >
                     <i class="fa-solid fa-magnifying-glass"></i>
