--- a/proyecto/Registro/registro.html
+++ b/proyecto/Registro/registro.html
@@ -15,7 +15,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#">Fauna</a></li>
                 <li><a href="#">Flora</a></li>
-                <li><a href="#">Rutas</a></li>
+                <li><a href="../Rutas/rutas.html">Rutas</a></li>
                 <li><a href="../Login/login.html">Iniciar Sesión</a></li>
             </ul>
         </nav>
