--- a/proyecto/Registro/registro.html
+++ b/proyecto/Registro/registro.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Fauna</a></li>
-                <li><a href="#">Flora</a></li>
+                <li><a href="../Fauna/fauna.html">Fauna</a></li>
+                <li><a href="../Flora/flora.html">Flora</a></li>
                 <li><a href="../Rutas/rutas.html">Rutas</a></li>
                 <li><a href="../Login/login.html">Iniciar Sesión</a></li>
             </ul>
