--- a/proyecto/Rutas/rutas.html
+++ b/proyecto/Rutas/rutas.html
@@ -16,8 +16,8 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Fauna</a></li>
-                <li><a href="#">Flora</a></li>
+                <li><a href="../Fauna/fauna.html">Fauna</a></li>
+                <li><a href="../Flora/flora.html">Flora</a></li>
                 <li><a href="../Login/login.html">Iniciar Sesión</a></li>
                 <li><a href="../Registro/registro.html">Registrarse</a></li>
             </ul>
