--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -54,7 +54,7 @@
             <h1>Conoce más: </h1>
             <iframe src="https://www.youtube.com/embed/5XaibqGzWEs?si=MVr87xVC5-mKoPwt&autoplay=1"
                 title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             <p> Visita la página oficial del Ministerio del <a href="https://www.miteco.gob.es/es/parques-nacionales-oapn/red-parques-nacionales/parques-nacionales/monfrague.html">Parque Nacional de Monfrague</a></p>
         </div>
