--- a/proyecto/Flora/flora.html
+++ b/proyecto/Flora/flora.html
@@ -17,10 +17,6 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="../Fauna/fauna.html">Fauna</a></li>
                 <li><a href="../Rutas/rutas.html">Rutas</a></li>
-                <li>
-                    <input type="text" placeholder="Buscar" >
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </li>
                 <li><a href="../Login/login.html">Iniciar Sesión</a></li>
                 <li><a href="../Registro/registro.html">Registrarse</a></li>
             </ul>
@@ -32,14 +28,26 @@
             <h1>Flora en Monfragüe</h1>
             <p>Explora la variada vegetación que forma parte del ecosistema único de Monfragüe.</p>
 
-            <!-- Agrega aquí información y contenido sobre la flora -->
+            
             <div class="especie">
-                <h2>Encina</h2>
-                <p>Información sobre la encina, una especie común en Monfragüe.</p>
-                <img src="../imagenes/encina_monfrague.jpg" alt="Encina" width="600px">
+                <h2>Encina (Quercus ilex rotundifolia)</h2>
+                <p>Llega a medir entre 15 o 20 m aunque en algunos casos llegan a ser bastante más grandes. Es un árbol del que el hombre ha obtenido y obtiene gran variedad de productos: leña, alimento para el ganado…, además de servir para cobijo de pajarillos, base de nidos de grandes rapaces, etc.</p>
+                <img src="../imagenes/encina_monfrague.jpg" alt="encina">
             </div>
 
-            <!-- Agrega más secciones para otras especies -->
+            <div class="especie">
+                <h2>Alcornoque (Quercus suber)</h2>
+                <p>Árbol característico de las dehesas extremeñas, al igual que la encina, aunque este requiere algo más de humedad que aquélla, por lo que es más abundante en las umbrías. Es un árbol de gran importancia económica, ya que de él el hombre extrae diversos productos, tales como las bellotas, el corcho o su madera utilizada como leña. Una vez realizada la saca del corcho, que se produce cada 9 ó 10 años, el tronco de este árbol queda de un color rojizo muy característico y de gran belleza. </p>
+                <img src="../imagenes/alcornoque.jpeg" alt="alcornoque">
+            </div>
+
+            <div class="especie">
+                <h2>Jara Cervuna (Cistus populifolius)</h2>
+                <p>Arbusto de grandes hojas acorazonadas, tallos rojizos y fuerte olor balsámico. Especie presente en toda la Península sobre todo en el sur, que requiere suelos y ambientes algo más frescos que otras jaras. El nombre específico de esta planta significa hoja de álamo, dado la semejanza existente. La madera, como la de todas las jaras, es muy dura y resistente, pero dado su pequeño tamaño, sólo se utiliza para quemar. </p>
+                <img src="../imagenes/jara.jpeg" alt="jara">
+            </div>
+
+            
 
         </main>
     </div>
