--- a/tema06/ejer01.html
+++ b/tema06/ejer01.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/Ej2.css">
     <title>Ejercicio</title>
-    <link rel="stylesheet" href="css9.css">
+    <link rel="stylesheet" href="grid.css">
 </head>
 <body>
     <div class="contenedor">
