--- a/tema06/actividad6/Ejemplo CSS Responsive Tabs con Flexbox/index.html
+++ b/tema06/actividad6/Ejemplo CSS Responsive Tabs con Flexbox/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/miestilo.css">
+    <script src="https://kit.fontawesome.com/9cfe8b4c32.js" crossorigin="anonymous"></script>
     <title>Ejemplo de Menú Flex con tabs Responsive</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Ejemplo de Menú Flex Responsive con Tabs </h1>
+        <img src="../img/logo_IES.jpg" alt="logo_IES">
+        <h1>IES Valle del Jerte </h1>
+        <img src="../img/logo_IyC.png" alt="logo_IyC">
     </header>
 
     <div class="responsive-tabs">
@@ -20,11 +23,13 @@
         <input class="estado" type="radio" title="tab-dos" name="tabs-estado" id="tab-dos" />
         <input class="estado" type="radio" title="tab-tres" name="tabs-estado" id="tab-tres" />
         <input class="estado" type="radio" title="tab-cuatro" name="tabs-estado" id="tab-cuatro" />
+        <input class="estado" type="radio" title="tab-cinco" name="tabs-estado" id="tab-cinco" />
         <div class="tabs flex-tabs">
             <label for="tab-uno" id="tab-uno-label" class="tab">Tab 1</label>
             <label for="tab-dos" id="tab-dos-label" class="tab">Tab 2</label>
             <label for="tab-tres" id="tab-tres-label" class="tab">Tab 3</label>
             <label for="tab-cuatro" id="tab-cuatro-label" class="tab">Tab 4</label>
+            <label for="tab-cinco" id="tab-cinco-label" class="tab">Tab 5</label>
             <div id="tab-uno-panel" class="panel">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum purus enim, lobortis
                     suscipit
@@ -75,17 +80,39 @@
                     Nulla quis
                     nibh erat. Vestibulum at risus risus.</p>
             </div>
+            <div id="tab-cinco-panel" class="panel">
+                <p>Vivamus condimentum id arcu id aliquet. In ullamcorper lectus nec porta condimentum. Aliquam erat
+                    volutpat.
+                    Praesent vel urna ac diam sagittis dignissim non ut neque. Pellentesque non urna nisl. Sed a luctus
+                    justo. Ut
+                    a auctor diam. Nulla viverra nulla nunc, in consectetur ante pretium aliquam. Mauris mi mauris,
+                    sodales ut
+                    sagittis ut, eleifend a libero. Suspendisse in massa at lectus fringilla blandit a id tellus.
+                    Pellentesque
+                    finibus vitae sem eget posuere. Sed risus velit, malesuada sed est id, rhoncus hendrerit quam.
+                    Nulla quis
+                    nibh erat. Vestibulum at risus risus.</p>
+            </div>
         </div>
     </div>
 
     <aside>
-
+        <img src="../img/aside_FPB.png" alt="logo1">
+        <img src="../img/aside_SMR.png" alt="logo2">
+        <img src="../img/aside_DAM.png" alt="logo3">
+        <img src="../img/aside_DAW.png" alt="logo4">
+        <img src="../img/aside_ASIR.png" alt="logo5">
     </aside>
 
     <footer>
-
+            <p>Curso 2018/19 - Diseño de Interfaces Web </p>
+            <div class="logos">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
     </footer>
-    
+
 </body>
 
 </html>
