--- a/tema09/actividad1/bootstrap.html
+++ b/tema09/actividad1/bootstrap.html
@@ -10,16 +10,19 @@
 </head>
 
 <style>
-
-    .container {
-        width: 100%;
-    }
-
+   
     div {
         height: 70px;
         margin: 5px 0;
         border-radius: 20px;
     }
+
+    p {
+        height: 70px;
+        border-radius: 20px; 
+    }
+
+
 </style>
 
 
@@ -36,20 +39,21 @@
             <div class="col-3">
                 <p></p>
             </div>
-            <div class="col-3 bg-success">
-                <p>1</p>
+            <div class="col-3">
+                <p class=" bg-success">1</p>
             </div>
-            <div class="col-3 bg-success">
-                <p>2</p>
+            <div class="col-3">
+                <p class=" bg-success">2</p>
             </div>
             <div class="col-3">
                 <p></p>
             </div>
         </div>
 
+
         <div class="row">
-            <div class="col-3 bg-success">
-                <p>3</p>
+            <div class="col-3">
+                <p class=" bg-success">3</p>
             </div>
             <div class="col-3">
                 <p></p>
@@ -57,24 +61,24 @@
             <div class="col-3">
                 <p></p>
             </div>
-            <div class="col-3 bg-success">
-                <p>4</p>
+            <div class="col-3">
+                <p class=" bg-success">4</p>
             </div>
         </div>
 
 
         <div class="row">
-            <div class="col-3 bg-primary">
-                <p>d</p>
+            <div class="col-3">
+                <p class=" bg-primary">d</p>
             </div>
-            <div class="col-3 bg-primary">
-                <p>c</p>
+            <div class="col-3">
+                <p class=" bg-primary">c</p>
             </div>
-            <div class="col-3 bg-primary">
-                <p>b</p>
+            <div class="col-3">
+                <p class=" bg-primary">b</p>
             </div>
-            <div class="col-3 bg-primary">
-                <p>a</p>
+            <div class="col-3">
+                <p class=" bg-primary">a</p>
             </div>
         </div>
 
@@ -88,11 +92,11 @@
             <div class="col-3">
                 <p></p>
             </div>
-            <div class="col-3 bg-success">
-                <p>:(</p>
+            <div class="col-3">
+                <p class=" bg-success">:(</p>
             </div>
-            <div class="col-3 bg-success">
-                <p>:D</p>
+            <div class="col-3">
+                <p class=" bg-success">:D</p>
             </div>
             <div class="col-3">
                 <p></p>
