--- a/tema09/actividad2/bootstrap2.html
+++ b/tema09/actividad2/bootstrap2.html
@@ -12,34 +12,34 @@
 
     <div class="container h-100">
 
-        <div class="row bg-secondary">
+        <div class="row bg-secondary alturaCabecera rounded">
             <div class="col">
                 <h1>Cabecera</h1>
             </div>
         </div>
 
         <div class="row d-none d-lg-flex bg-warning">
-            <div class="col d-flex justify-content-center">
+            <div class="col d-flex justify-content-center alturaMenu rounded">
                 <h1>Menú</h1>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-4 col-sm-4 col-md-3 col-lg-3 bg-info">
+            <div class="col-4 col-sm-4 col-md-3 col-lg-3 bg-info altura rounded">
                 <h1>Aside1</h1>
             </div>
-            <div class="col-8 col-sm-8 col-md-6 col-lg-3 bg-danger">
+            <div class="col-8 col-sm-8 col-md-6 col-lg-3 bg-danger rounded">
                 <h1>Main</h1>
             </div>
-            <div class="d-none d-md-flex col-md-3 bg-primary">
+            <div class="d-none d-md-flex col-md-3 bg-primary rounded">
                 <h1>Aside2</h1>
             </div>
-            <div class="d-none d-lg-flex col-lg-3 bg-secondary">
+            <div class="d-none d-lg-flex col-lg-3 bg-secondary rounded">
                 <h1>Aside3</h1>
             </div>
         </div>
 
-        <div class="row bg-secondary">
+        <div class="row bg-secondary alturaFooter rounded">
             <div class="col">
                 <h1>Pie de Página</h1>
             </div>
