--- a/tema09/actividad3/bootstrap3.html
+++ b/tema09/actividad3/bootstrap3.html
@@ -10,39 +10,41 @@
 <body>
     <div class="container">
 
-        <div class="row">
+        <div class="row text-white bg-success">
             <div class="col-12">
                 <h1>HEADER</h1>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12">
+        <div class="row my-5 align-items-center">
+            <div class="col-12 col-md-8 text-secondary">
                 <h1>MAIN</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam numquam perferendis tempora tenetur! Qui harum saepe excepturi vel sed reprehenderit nobis id pariatur, architecto temporibus, illum esse quidem accusamus. Eius accusantium at, animi maiores deleniti facilis laboriosam vitae. Sunt incidunt ratione unde officia nostrum laboriosam totam placeat voluptate commodi numquam.</p>
             </div>
-            <div class="col-12">
+            <div class="col-12 col-md-4 text-primary bg-secondary h-50 p-4">
                 <h1>ASIDE</h1>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-12">
+        <div class="row justify-content-between my-5 text-white">
+            <div class="col-12 col-md-4 col-lg-3 bg-primary">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima omnis non officiis a culpa repellendus aliquid, laudantium asperiores porro. Ut?
                 </p>
             </div>
-            <div class="col-12">
+            <div class="col-12 col-md-4 col-lg-3 bg-primary">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis vero distinctio debitis repellat, officia blanditiis modi? Explicabo aliquid maxime cupiditate?
                 </p>
             </div>
-            <div class="col-12">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim qui, quis obcaecati eveniet ad rem. Dignissimos voluptas dolorum ipsam aspernatur?</p>
+            <div class="col-12 col-md-4 col-lg-3 bg-primary">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim qui, quis obcaecati eveniet ad rem. Dignissimos voluptas dolorum ipsam aspernatur?
+                </p>
             </div>
         </div>
 
-        <div class="row bg-secondary">
+        <div class="row text-white bg-secondary">
             <div class="col-12">
                 <h1>Footer</h1>
             </div>
