--- a/tema09/actividad4/bootstrap4.html
+++ b/tema09/actividad4/bootstrap4.html
@@ -97,6 +97,13 @@
         </button>
     </div>
 
+    <!-- Cuerpo -->
+
+    <main class="text-secondary my-5 mx-3">
+        <h1>Profesionales eléctricos a su servicio</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias at provident ut impedit iusto explicabo ab optio labore possimus excepturi rerum autem distinctio neque voluptatum delectus eveniet ipsam placeat, harum nulla reiciendis expedita asperiores aperiam numquam veritatis. Soluta recusandae illo dignissimos blanditiis, voluptatibus accusamus vel esse numquam reprehenderit provident vitae possimus illum quibusdam quo? Ea saepe voluptatum fugiat facilis, ipsa, impedit qui itaque, minus odio nam distinctio odit. Veritatis, repudiandae iure? Amet voluptates ea aliquam, dolorem quia necessitatibus nisi aliquid alias accusamus enim optio illum laborum voluptatem ex nemo a nam adipisci, quis natus provident dolore? Quisquam doloremque numquam ducimus autem, veritatis corrupti ea maxime fugit laboriosam illum assumenda nesciunt cumque, mollitia cupiditate corporis? Commodi atque sint, soluta deserunt iusto tempora porro quibusdam perferendis, tenetur officiis necessitatibus aperiam repellendus itaque nulla mollitia, nostrum ipsam voluptas quas perspiciatis deleniti incidunt! Exercitationem repellendus illo esse sequi est fuga delectus nesciunt, incidunt ipsam saepe. Architecto, cumque voluptatem esse tempore numquam quidem nihil velit perferendis necessitatibus corrupti consequatur totam! Ratione ad sint natus eaque eligendi eum, modi qui atque fugit fuga dolorum maiores accusamus soluta.</p>
+    </main>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
